network-policies/l4-policy-l7/np-01-egress-pod-port.yaml
# this policy will how a pod app1 in dev namespace can senf traffic to all other pods in same namespae onn a specific pod &also how to senf traffic to  a specific namespace on a specific port
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-app1-to-app2
  namespace: dev
spec:
  endpointSelector:
    matchLabels:
      app: app1
  egress:
  - toPorts:
      - ports:                    #can also be used to allow traffic to a specific port on all pods.
          - port: "80"
            protocol: TCP
      # - ports:                 # Defining the Port Range to allow traffic from app1 pod  
      #     - port: "8080"
      #       endPorts: "8085"
      #       protocol: TCP
